@@ -15,9 +15,15 @@
     <netty.quic.version>0.0.75.Final</netty.quic.version>
     <jackson.version>2.22.2</jackson.version>
     <junit.version>6.1.3</junit.version>
+    <sqlite.version>3.53.4.0</sqlite.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>${sqlite.version}</version>
+    </dependency>
     <dependency>
       <groupId>io.netty.incubator</groupId>
       <artifactId>netty-incubator-codec-classes-quic</artifactId>
@@ -79,6 +85,7 @@
         <version>3.6.0</version>
         <configuration>
           <useModulePath>false</useModulePath>
+          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
